--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fi.metatavu.muisti.exhibitionui">
 
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+        android:name=".ExhibitionUIApplication">
         <activity
             android:name=".views.TestActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -19,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.UpdateUserValueService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
