--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     ext.materialVersion = "1.1.0"
     ext.archLifecycleVersion = "2.2.0"
-    ext.roomVersion = "2.2.3"
+    ext.roomVersion = "2.2.4"
+    ext.daggerVersion = "2.26"
 
     repositories {
         google()
