--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,25 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+kapt {
+    correctErrorTypes true
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+
+    file('.env').readLines().each() {
+        if (!it.isEmpty() && !it.startsWith("#")) {
+            def pos = it.indexOf("=")
+            def key = it.substring(0, pos)
+            def value = it.substring(pos + 1)
+
+            if (System.getProperty(key) == null) {
+                System.setProperty(key, value)
+            }
+        }
+    }
 
     defaultConfig {
         applicationId "fi.metatavu.muisti.exhibitionui"
@@ -18,12 +34,23 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            buildConfigField("String", "MUISTI_API_BASE_URL", "\"${System.getProperty('MUISTI_API_BASE_URL')}\"")
+            buildConfigField("String", "KEYCLOAK_URL", "\"${System.getProperty('KEYCLOAK_URL')}\"")
+            buildConfigField("String", "KEYCLOAK_REALM", "\"${System.getProperty('KEYCLOAK_REALM')}\"")
+            buildConfigField("String", "KEYCLOAK_CLIENT_ID", "\"${System.getProperty('KEYCLOAK_CLIENT_ID')}\"")
+            buildConfigField("String", "KEYCLOAK_USERNAME", "\"${System.getProperty('KEYCLOAK_USERNAME')}\"")
+            buildConfigField("String", "KEYCLOAK_PASSWORD", "\"${System.getProperty('KEYCLOAK_PASSWORD')}\"")
+        }
     }
+
     lintOptions {
         disable('AllowBackup', 'GoogleAppIndexingWarning', 'MissingApplicationIcon')
     }
@@ -39,19 +66,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation project(':api-client')
     implementation "com.squareup.okhttp3:okhttp:4.2.2"
+    implementation "io.github.cdimascio:java-dotenv:5.1.3"
 
-    // Dagger
+    // Moshi
 
-    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
-    api "com.google.dagger:dagger-android:$rootProject.daggerVersion"
-    api "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
+    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    implementation "com.squareup.moshi:moshi-adapters:1.8.0"
 
     // Room components
 
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
-    kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
 
     // Lifecycle components
 
@@ -66,4 +92,8 @@ dependencies {
     // UI
 
     implementation "com.google.android.material:material:$rootProject.materialVersion"
+
+    // JWT decode
+
+    implementation 'com.auth0.android:jwtdecode:1.4.0'
 }
