--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fi.metatavu.muisti.exhibitionui">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application android:label="@string/app_name"
         android:name=".ExhibitionUIApplication">
-
-        <uses-permission android:name="android.permission.INTERNET"/>
-        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
         <activity
             android:name=".views.TestActivity"
@@ -33,6 +33,11 @@
 
         <service
             android:name=".services.UpdateUserValueService"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <service
+            android:name=".services.UpdateKeycloakTokenService"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
