--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
             buildConfigField("String", "KEYCLOAK_CLIENT_ID", "\"${System.getProperty('KEYCLOAK_CLIENT_ID')}\"")
             buildConfigField("String", "KEYCLOAK_USERNAME", "\"${System.getProperty('KEYCLOAK_USERNAME')}\"")
             buildConfigField("String", "KEYCLOAK_PASSWORD", "\"${System.getProperty('KEYCLOAK_PASSWORD')}\"")
+            buildConfigField("Boolean", "DESTRUCTIVE_MIGRATIONS", System.getProperty('DESTRUCTIVE_MIGRATIONS'))
         }
     }
 
@@ -67,6 +68,7 @@ dependencies {
     implementation project(':api-client')
     implementation "com.squareup.okhttp3:okhttp:4.2.2"
     implementation "io.github.cdimascio:java-dotenv:5.1.3"
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     // Moshi
 
