--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "MUISTI_API_BASE_URL", "\"${System.getProperty('MUISTI_API_BASE_URL')}\"")
+            buildConfigField("String", "KEYCLOAK_URL", "\"${System.getProperty('KEYCLOAK_URL')}\"")
+            buildConfigField("String", "KEYCLOAK_REALM", "\"${System.getProperty('KEYCLOAK_REALM')}\"")
+            buildConfigField("String", "KEYCLOAK_CLIENT_ID", "\"${System.getProperty('KEYCLOAK_CLIENT_ID')}\"")
+            buildConfigField("String", "KEYCLOAK_USERNAME", "\"${System.getProperty('KEYCLOAK_USERNAME')}\"")
+            buildConfigField("String", "KEYCLOAK_PASSWORD", "\"${System.getProperty('KEYCLOAK_PASSWORD')}\"")
+            buildConfigField("Boolean", "DESTRUCTIVE_MIGRATIONS", System.getProperty('DESTRUCTIVE_MIGRATIONS'))
         }
 
         debug {
