--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,13 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+    }
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -104,4 +111,14 @@ dependencies {
     // JWT decode
 
     implementation 'com.auth0.android:jwtdecode:1.4.0'
+
+    // MQTT
+
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+
+    // FlowTextView
+
+    implementation 'com.github.deano2390:FlowTextView:2.0.5'
+    // implementation group: 'uk.co.deanwild', name: 'flowtextview', version: '2.0.2'
+
 }
