--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,9 @@ android {
         disable('AllowBackup', 'GoogleAppIndexingWarning', 'MissingApplicationIcon')
     }
 }
-
+repositories {
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -104,4 +106,6 @@ dependencies {
     // JWT decode
 
     implementation 'com.auth0.android:jwtdecode:1.4.0'
+
+    implementation 'com.github.deano2390:FlowTextView:2.0.5'
 }
