--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -113,4 +117,8 @@ dependencies {
     // JWT decode
 
     implementation 'com.auth0.android:jwtdecode:1.4.0'
+
+    // Text flow view
+
+    implementation 'com.github.deano2390:FlowTextView:2.0.5'
 }
