--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,15 +85,13 @@ repositories {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation project(':api-client')
     implementation "com.squareup.okhttp3:okhttp:4.2.2"
     implementation "io.github.cdimascio:java-dotenv:5.1.3"
@@ -143,5 +141,16 @@ dependencies {
 
     implementation 'com.github.deano2390:FlowTextView:2.0.5'
 
+    // Android test
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Test
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "fi.metatavu.jaxrs.testbuilder:jaxrs-functional-test-builder:$jaxrs_functional_test_builder_version"
     testImplementation 'io.appium:java-client:3.3.0'
+    testImplementation project(':api-test-builder')
+
 }
