--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
+plugins {
+  id 'com.github.kt3k.coveralls' version '2.8.4'
+}
+
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
+apply plugin: 'jacoco'
 
 kapt {
     correctErrorTypes true
@@ -54,13 +56,24 @@ android {
             buildConfigField("String", "KEYCLOAK_PASSWORD", "\"${System.getProperty('KEYCLOAK_PASSWORD')}\"")
             buildConfigField("Boolean", "DESTRUCTIVE_MIGRATIONS", System.getProperty('DESTRUCTIVE_MIGRATIONS') ?: "false")
             buildConfigField("String", "MQTT_BASE_URL", "\"${System.getProperty('MQTT_BASE_URL')}\"")
-            buildConfigField("String", "MQTT_USER", "\"${System.getProperty('MQTT_USER')}\"")
-            buildConfigField("String", "MQTT_PASSWORD", "\"${System.getProperty('MQTT_PASSWORD')}\"")
             buildConfigField("String", "MQTT_BASE_TOPIC", "\"${System.getProperty('MQTT_BASE_TOPIC')}\"")
 
+            if (System.getProperty('MQTT_USER') != null) {
+                buildConfigField("String", "MQTT_USER", "\"${System.getProperty('MQTT_USER')}\"")
+            } else {
+                buildConfigField("String", "MQTT_USER", "null")
+            }
+
+            if (System.getProperty('MQTT_PASSWORD') != null) {
+                buildConfigField("String", "MQTT_PASSWORD", "\"${System.getProperty('MQTT_PASSWORD')}\"")
+            } else {
+                buildConfigField("String", "MQTT_PASSWORD", "null")
+            }
         }
 
         debug {
+            testCoverageEnabled true
+
             buildConfigField("String", "MUISTI_API_BASE_URL", "\"${System.getProperty('MUISTI_API_BASE_URL')}\"")
             buildConfigField("String", "KEYCLOAK_URL", "\"${System.getProperty('KEYCLOAK_URL')}\"")
             buildConfigField("String", "KEYCLOAK_REALM", "\"${System.getProperty('KEYCLOAK_REALM')}\"")
@@ -69,14 +82,50 @@ android {
             buildConfigField("String", "KEYCLOAK_PASSWORD", "\"${System.getProperty('KEYCLOAK_PASSWORD')}\"")
             buildConfigField("Boolean", "DESTRUCTIVE_MIGRATIONS", System.getProperty('DESTRUCTIVE_MIGRATIONS') ?: "false")
             buildConfigField("String", "MQTT_BASE_URL", "\"${System.getProperty('MQTT_BASE_URL')}\"")
-            buildConfigField("String", "MQTT_USER", "\"${System.getProperty('MQTT_USER')}\"")
-            buildConfigField("String", "MQTT_PASSWORD", "\"${System.getProperty('MQTT_PASSWORD')}\"")
             buildConfigField("String", "MQTT_BASE_TOPIC", "\"${System.getProperty('MQTT_BASE_TOPIC')}\"")
+
+            if (System.getProperty('MQTT_USER') != null) {
+                buildConfigField("String", "MQTT_USER", "\"${System.getProperty('MQTT_USER')}\"")
+            } else {
+                buildConfigField("String", "MQTT_USER", "null")
+            }
+
+            if (System.getProperty('MQTT_PASSWORD') != null) {
+                buildConfigField("String", "MQTT_PASSWORD", "\"${System.getProperty('MQTT_PASSWORD')}\"")
+            } else {
+                buildConfigField("String", "MQTT_PASSWORD", "null")
+            }
         }
     }
     lintOptions {
         disable('AllowBackup', 'GoogleAppIndexingWarning', 'MissingApplicationIcon')
     }
+}
+
+coveralls {
+    jacocoReportPath 'build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml'
+}
+
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    // The lines below make sure we can report against Kotlin and exclude some Android Stuff
+    def fileFilter = [
+            '**/*Activity.class',
+            '**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*',
+            '**/*Test*.*', 'android/**/*.*'
+    ]
+    def debugTree = fileTree(dir: "$project.buildDir/tmp/kotlin-classes/debug", excludes: fileFilter)
+    def mainSrc = "$project.projectDir/src/main/java"
+
+    sourceDirectories.setFrom([mainSrc])
+    classDirectories.setFrom([debugTree])
+    executionData.setFrom(fileTree(dir: project.buildDir, includes: ['jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec']))
 }
 
 repositories {
