--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext.archLifecycleVersion = "2.2.0"
     ext.roomVersion = "2.2.4"
     ext.daggerVersion = "2.26"
+    ext.jaxrs_functional_test_builder_version = "1.0.4"
+    ext.awaitility_version = "4.0.2"
 
     repositories {
         google()
@@ -13,7 +15,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
