--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,5 @@
 steps:
+- name: gcr.io/cloud-builders/git
+  args: ['submodule', 'update', '--init', '--recursive']
 - name: thyrlian/android-sdk
   args: ["./gradlew", "clean", "test"]
