--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,6 @@ steps:
 - name: ubuntu
   args: ["ls", '-lha']
 - name: alpine/git
-  args: ['git', 'submodule', 'update', '--init', '--recursive']
+  args: ['submodule', 'update', '--init', '--recursive']
 - name: thyrlian/android-sdk
   args: ["./gradlew", "clean", "test"]
