--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,15 @@
 steps:
+- name: 'gcr.io/cloud-builders/git'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      git init
+      git remote add origin git@github.com:/Metatavu/muisti-exhibition-ui.git
+      git fetch --depth=1 origin $COMMIT_SHA
+      git reset --hard FETCH_HEAD
+      git submodule update --init
 - name: ubuntu
   args: ["ls", '-lha']
-- name: gcr.io/cloud-builders/git
-  args: ['submodule', 'update', '--init', '--recursive']
 - name: thyrlian/android-sdk
   args: ["./gradlew", "clean", "test"]
