--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,3 +24,6 @@ steps:
   - name: 'vol1'
     path: '/persistent_volume'
   args: ['cp', '/persistent_volume/app/build/outputs/apk/debug/app-debug.apk', 'gs://fullstackgcp-apk-builds/app-debug-$SHORT_SHA.apk']
+  
+timeout: 1200s
+
