--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,21 +9,6 @@ steps:
       git fetch --depth=1 origin $COMMIT_SHA
       git reset --hard FETCH_HEAD
       git submodule update --init
-- name: 'ubuntu'
-  volumes:
-  - name: 'vol1'
-    path: '/persistent_volume'
-  args: ['cp', '-a', '.', '/persistent_volume']
-- name: 'gcr.io/cloud-builders/docker'
-  volumes:
-  - name: 'vol1'
-    path: '/persistent_volume'
-  args: ['run', '-v', 'vol1:/home/app', '--rm', 'gcr.io/fullstackgcp/gradle', '/bin/sh', '-c', 'cd /home/app && ./gradlew clean assembleDebug']
-- name: 'gcr.io/cloud-builders/gsutil'
-  volumes:
-  - name: 'vol1'
-    path: '/persistent_volume'
-  args: ['cp', '/persistent_volume/app/build/outputs/apk/debug/app-debug.apk', 'gs://fullstackgcp-apk-builds/app-debug-$SHORT_SHA.apk']
-  
-timeout: 1200s
+- name: 'gcr.io/kubernetes-240206/android-build-docker'
+  args: ["gradle", "clean", "test"]
 
