--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,7 @@ steps:
   args:
     - '-c'
     - |
+      ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
       git init
       git remote add origin git@github.com:/Metatavu/muisti-exhibition-ui.git
       git fetch --depth=1 origin $COMMIT_SHA
