--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,7 @@ steps:
   args:
     - '-c'
     - |
+      mkdir ~/.ssh
       touch ~/.ssh/known_hosts
       ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
       git init
