--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,8 @@ steps:
       git reset --hard FETCH_HEAD
       git submodule update --init
       ls -lha
+- name: amazon/aws-cli
+  args: ["$(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)"]
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
