--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
       git submodule update --init
       ls -lha
 - name: amazon/aws-cli
-  args: ["aws"]
+  args: ["ecr"]
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
