--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,8 +10,9 @@ steps:
       git reset --hard FETCH_HEAD
       git submodule update --init
       ls -lha
+
 - name: amazon/aws-cli
-  args: ["ecr", "get-login-password", "--region", "$_AWS_DEFAULT_REGION"]
+  args: ["configure", "--help"]
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
