--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,6 +15,8 @@ steps:
   args: ["configure", "set", "aws_access_key_id", "$_AWS_ACCESS_KEY_ID"]
 - name: amazon/aws-cli
   args: ["configure", "set", "aws_secret_access_key", "$_AWS_SECRET_ACCESS_KEY"]
+- name: amazon/aws-cli
+  args: ["ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 414711980085.dkr.ecr.eu-central-1.amazonaws.com/"
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
