--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,7 +16,10 @@ steps:
 - name: amazon/aws-cli
   args: ["configure", "set", "aws_secret_access_key", "$_AWS_SECRET_ACCESS_KEY"]
 - name: amazon/aws-cli
-  args: ["ecr", "get-login-password", "--region", "$_AWS_DEFAULT_REGION", "|", "docker", "login", "--username", "AWS", "--password-stdin", "$_AWS_ECR_URL"]
+  entrypoint: 'bash'
+  args:
+  - '-c' # pass what follows as a command to bash
+  - | aws ecr get-login-password --region $_AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $_AWS_ECR_URL
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
