--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,8 +18,9 @@ steps:
 - name: amazon/aws-cli
   entrypoint: 'bash'
   args:
-  - '-c' # pass what follows as a command to bash
-  - | aws ecr get-login-password --region $_AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $_AWS_ECR_URL
+  - '-c'
+  - | 
+    aws ecr get-login-password --region $_AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $_AWS_ECR_URL
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
