--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,11 +22,7 @@ steps:
     - |
       aws ecr get-login-password --region $_AWS_DEFAULT_REGION > password.txt
 - name: docker
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-       docker login --username AWS --password-stdin $_AWS_ECR_URL $(cat password.txt)
+  args: ["docker", "login", "--username", "AWS", "--password-stdin", "$_AWS_ECR_URL", "$(cat password.txt)"]
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
