--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,18 +15,13 @@ steps:
   args: ["configure", "set", "aws_access_key_id", "$_AWS_ACCESS_KEY_ID"]
 - name: amazon/aws-cli
   args: ["configure", "set", "aws_secret_access_key", "$_AWS_SECRET_ACCESS_KEY"]
-- name: amazon/aws-cli
+- name: golang
   entrypoint: 'bash'
   args:
     - '-c'
     - |
-      aws ecr get-login-password --region $_AWS_DEFAULT_REGION > password.txt
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      docker login --username AWS --password-stdin $_AWS_ECR_URL $(cat password.txt)
+      go get -u github.com/omerh/aws-docker-login
+      $(aws-docker-login $_AWS_DEFAULT_REGION)
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args: ["./gradlew", "clean", "build"]
   env:
