--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,15 +15,14 @@ steps:
   args: ["configure", "set", "aws_access_key_id", "$_AWS_ACCESS_KEY_ID"]
 - name: amazon/aws-cli
   args: ["configure", "set", "aws_secret_access_key", "$_AWS_SECRET_ACCESS_KEY"]
-- name: golang
-  entrypoint: 'bash'
+- name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   args:
     - '-c'
     - |
-      go get -u github.com/omerh/aws-docker-login
-      $(aws-docker-login $_AWS_DEFAULT_REGION)
-- name: 'gcr.io/kubernetes-240206/android-build-docker:master'
-  args: ["./gradlew", "clean", "build"]
+       go get -u github.com/omerh/aws-docker-login
+       $(aws-docker-login $_AWS_DEFAULT_REGION)
+      ./gradlew clean build
+
   env:
     - 'ANDROID_SDK_ROOT=/usr/lib/android-sdk'
     - 'ANDROID_HOME=/usr/lib/android-sdk'
