--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,11 +20,7 @@ steps:
   args:
     - '-c'
     - |
-      apt update
-      apt install golang-go -y
-      apt install docker -y
-      go get -u github.com/omerh/aws-docker-login
-      $(aws-docker-login $_AWS_DEFAULT_REGION)
+      $(aws ecr get-login --no-include-email --region $_AWS_DEFAULT_REGION)
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
   args:
