--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,7 +21,7 @@ steps:
     - '-c'
     - |
       apt update
-      apt install awscli
+      apt install awscli -y
       $(aws ecr get-login --no-include-email --region $_AWS_DEFAULT_REGION)
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
