--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,14 +15,18 @@ steps:
   args: ["configure", "set", "aws_access_key_id", "$_AWS_ACCESS_KEY_ID"]
 - name: amazon/aws-cli
   args: ["configure", "set", "aws_secret_access_key", "$_AWS_SECRET_ACCESS_KEY"]
-- name: ubuntu
+- name: amazon/aws-cli
   entrypoint: 'bash'
   args:
     - '-c'
     - |
-      apt update
-      apt install awscli -y
-      $(aws ecr get-login --no-include-email --region $_AWS_DEFAULT_REGION)
+      aws ecr get-login-password --region $_AWS_DEFAULT_REGION > ~/password.txt
+- name: docker
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        cat ~/password.txt | docker login --password-stdin
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
   args:
