--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,5 +36,6 @@ steps:
   env:
     - 'ANDROID_SDK_ROOT=/usr/lib/android-sdk'
     - 'ANDROID_HOME=/usr/lib/android-sdk'
-
+options:
+  machineType: n1-standard-2
 timeout: 6001s
