--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -52,8 +52,11 @@ steps:
   args:
     - '-c'
     - |
-      sleep 15m
-      docker exec -it docker_android_1 tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 10m
+      docker exec -it docker-android_1 tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 5m
+      docker exec -it docker-android_1 tail -f /var/log/supervisor/docker-android.stdout.log
+
 options:
   machineType: 'N1_HIGHCPU_8'
 timeout: 6001s
