--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,12 +32,8 @@ steps:
   volumes:
   - name: 'supervisorlogs'
     path: '/var/log/supervisor'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      export TERM=xterm
-      watch cat /var/log/supervisor/docker-android.stdout.log
+  args: ["watch", "cat", "/var/log/supervisor/docker-android.stdout.log"]
+      
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
   args:
