--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,7 +32,7 @@ steps:
   volumes:
   - name: 'supervisorlogs'
     path: '/var/log/supervisor'
-  args: ["watch", "cat", "/var/log/supervisor/docker-android.stdout.log"]
+  args: ["apt", "update", "&&", "apt", "upgrade", "-y", "&&" , "watch", "cat", "/var/log/supervisor/docker-android.stdout.log"]
       
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
