--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,8 +32,13 @@ steps:
   volumes:
   - name: 'supervisorlogs'
     path: '/var/log/supervisor'
-  args: ["apt", "update", "&&", "apt", "upgrade", "&&" , "watch", "cat", "/var/log/supervisor/docker-android.stdout.log"]
-      
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      apt update
+      apt upgrade
+      watch cat /var/log/supervisor/docker-android.stdout.log
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
   args:
