--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,17 +28,6 @@ steps:
     - '-c'
     - |
       cat ~/password.txt | docker login --username AWS --password-stdin $_AWS_ECR_URL
-- name: 'ubuntu'
-  volumes:
-  - name: 'supervisorlogs'
-    path: '/var/log/supervisor'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      apt update
-      apt install procps
-      watch tail -f /var/log/supervisor/docker-android.stdout.log
 - name: 'gcr.io/kubernetes-240206/android-build-docker:master'
   entrypoint: 'bash'
   args:
@@ -51,6 +40,51 @@ steps:
   env:
     - 'ANDROID_SDK_ROOT=/usr/lib/android-sdk'
     - 'ANDROID_HOME=/usr/lib/android-sdk'
+- name: 'ubuntu'
+  waitFor: ["-"]
+  volumes:
+  - name: 'supervisorlogs'
+    path: '/var/log/supervisor'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
+      sleep 1m
+      tail -f /var/log/supervisor/docker-android.stdout.log
 artifacts:
   objects:
     location: 'gs://metatavu-cloud-build-logs/$PROJECT_ID/$BUILD_ID'
